Update run-every-hour.yml - Try 6

--- a/.github/workflows/run-every-hour.yml
+++ b/.github/workflows/run-every-hour.yml
@@ -1,8 +1,8 @@
-# name: News Updater
-# on:
-#   schedule:
-#     - cron: '30 * * * *'
-#   workflow_dispatch:
+name: News Updater
+on:
+  schedule:
+    - cron: '30 * * * *'
+  workflow_dispatch:
 
 # jobs:
 #   update-news:
